--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,2 @@
-borow-service.url = http://localhost:8090/book
+borrow-service.url = http://localhost:8090/book
+front-service.url = http://localhost:8090/front
